Упростил guard-ветки в investment и обновил CLAUDE.md
- MoexIssClient.parseHistoryPage, AnalyticsService.calcDayValue: объединил последовательные guard-if в один
- AnalyticsService.groupCloseByDate: заменил неиспользуемый параметр lambda на _
- ProjectionService.calcMonthlyGrowthRate: заменил get(0)/get(size-1) на getFirst()/getLast()
- Добавил тесты на guard-ветки: AnalyticsServiceTest (qty<=0, отсутствие цены), MoexIssClientParseHistoryPageTest
- CLAUDE.md: добавил investment, JWT, правила про коммиты из корня и @Column